--- a/assets/index.html
+++ b/assets/index.html
@@ -101,10 +101,16 @@
     <div class="lds-dual-ring"></div>
   </div>
   <script type="module">
-    import init, {wasm_main} from './wasm/rust_graph.js';
+    import init, {initThreadPool, wasm_main} from './wasm/rust_graph.js';
 
     (async () => {
       await init();
+
+      // Thread pool initialization with the given number of threads
+      // (pass `navigator.hardwareConcurrency` if you want to use all cores).
+      await initThreadPool(navigator.hardwareConcurrency);
+      console.log("Thread pool initialized");
+
       wasm_main();
     })();
   </script>
